# papyrus

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yml
backend/: .gitignore  Dockerfile  Dockerfile.dev  app.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  password.py
backend/app/config/: core.py  swagger.py
backend/app/middleware/: request.py
backend/app/models/: health.py  request.py  response.py
backend/app/routers/: health.py
backend/app/services/password/: __init__.py  main.py  utils.py
backend/app/utils/: logger.py
backend/routers/: health.py
frontend/: Dockerfile  Dockerfile.dev  components.json  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/helper/: index.ts
frontend/src/api/types/: index.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FileDownload.tsx  FileUpload.tsx  utils.ts
frontend/src/components/theme/: ThemeProvider.tsx
frontend/src/containers/: Main.tsx  api.ts  types.ts
frontend/src/data/: data.ts
frontend/src/theme/: ThemeProvider.tsx  provider.ts
frontend/src/utils/: tailwind.ts
