[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tejas Nikhar <tejastn10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
pypdf2 = "^3.0.1"
pikepdf = "^9.6.0"
pytesseract = "^0.3.13"
minio = "^7.2.15"
python-jose = "^3.4.0"
pillow = "^11.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
