[tool.poetry]
name = "backend"
version = "0.0.1"
description = ""
authors = ["Tejas Nikhar <tejastn10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
python-multipart = "^0.0.20"
pillow = "^11.3.0"
pytest = "^8.4.1"
pypdf = "^5.7.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host: 0.0.0.0 --port 5000 --reload"
test = "pytest"
test-cov = "pytest --coverage --cov-report=html"

